# TimeAgentLinux

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: timeagent.desktop
src/: command.rs  holidays.rs  main.rs  mic.rs  models.rs  settings.rs  store.rs  tpclient.rs  ui_popup.rs  ui_prompt.rs  ui_settings.rs  ui_tasks.rs  watcher.rs
