[package]
name = "timeagent"
version = "0.1.0"
edition = "2021"
description = "Log meeting and task time to TargetProcess — native Linux tray app"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
ksni = "0.2"                       # StatusNotifierItem tray (GNOME via AppIndicator ext / KDE native)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"                      # libsecret-backed token storage
chrono = "0.4"
chrono-tz = "0.9"
libpulse-binding = "2"            # mic-in-use detection via PulseAudio / PipeWire pulse shim
dirs = "5"
anyhow = "1"
once_cell = "1"
iana-time-zone = "0.1"

[[bin]]
name = "timeagent"
path = "src/main.rs"
