[package]
name = "timeagent"
version = "0.1.0"
edition = "2021"
description = "Log meeting and task time to TargetProcess — native Linux tray app"
authors = ["Hatim Haffane <hatim.haffane@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hatimox/TimeAgentLinux"
repository = "https://github.com/hatimox/TimeAgentLinux"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }  # v4_10: AlertDialog
async-channel = "2"                # async→UI updates (replaces removed glib::MainContext::channel)
ksni = "0.2"                       # StatusNotifierItem tray (GNOME via AppIndicator ext / KDE native)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }  # persist token in libsecret / Secret Service
chrono = "0.4"
chrono-tz = "0.9"
libpulse-binding = "2"            # mic-in-use detection via PulseAudio / PipeWire pulse shim
dirs = "5"
anyhow = "1"
once_cell = "1"
iana-time-zone = "0.1"
gdk4-x11 = { version = "0.9", features = ["xlib"] }  # position popup at click (X11)
x11 = { version = "2", features = ["xlib"] }

[[bin]]
name = "timeagent"
path = "src/main.rs"

# Vendored ksni patched to expose `Tray::item_is_menu` (upstream leaves it
# hardcoded to false, so left-click hits Activate instead of the menu). See
# third_party/ksni/src/{lib,service}.rs.
[patch.crates-io]
ksni = { path = "third_party/ksni" }

# Smaller, faster release artifacts for packaging.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# ---- .deb packaging (cargo-deb) ----
# Runtime library deps are auto-detected from the ELF via dpkg-shlibdeps ($auto).
[package.metadata.deb]
section = "utils"
priority = "optional"
extended-description = """\
TimeAgent is a native Linux tray app (GTK4 + StatusNotifierItem) that logs \
meeting and task time to TargetProcess. Microphone-based meeting detection \
runs in-process via PulseAudio/PipeWire."""
assets = [
    ["target/release/timeagent", "usr/bin/", "755"],
    ["packaging/timeagent.desktop", "usr/share/applications/", "644"],
    ["packaging/icons/hicolor/16x16/apps/timeagent.png", "usr/share/icons/hicolor/16x16/apps/", "644"],
    ["packaging/icons/hicolor/32x32/apps/timeagent.png", "usr/share/icons/hicolor/32x32/apps/", "644"],
    ["packaging/icons/hicolor/48x48/apps/timeagent.png", "usr/share/icons/hicolor/48x48/apps/", "644"],
    ["packaging/icons/hicolor/64x64/apps/timeagent.png", "usr/share/icons/hicolor/64x64/apps/", "644"],
    ["packaging/icons/hicolor/128x128/apps/timeagent.png", "usr/share/icons/hicolor/128x128/apps/", "644"],
    ["packaging/icons/hicolor/256x256/apps/timeagent.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    ["packaging/icons/hicolor/512x512/apps/timeagent.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
    ["README.md", "usr/share/doc/timeagent/README.md", "644"],
]

# ---- .rpm packaging (cargo-generate-rpm) ----
# Build the binary first (cargo build --release); deps via --auto-req in CI.
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/timeagent", dest = "/usr/bin/timeagent", mode = "755" },
    { source = "packaging/timeagent.desktop", dest = "/usr/share/applications/timeagent.desktop", mode = "644" },
    { source = "packaging/icons/hicolor/16x16/apps/timeagent.png", dest = "/usr/share/icons/hicolor/16x16/apps/timeagent.png", mode = "644" },
    { source = "packaging/icons/hicolor/32x32/apps/timeagent.png", dest = "/usr/share/icons/hicolor/32x32/apps/timeagent.png", mode = "644" },
    { source = "packaging/icons/hicolor/48x48/apps/timeagent.png", dest = "/usr/share/icons/hicolor/48x48/apps/timeagent.png", mode = "644" },
    { source = "packaging/icons/hicolor/64x64/apps/timeagent.png", dest = "/usr/share/icons/hicolor/64x64/apps/timeagent.png", mode = "644" },
    { source = "packaging/icons/hicolor/128x128/apps/timeagent.png", dest = "/usr/share/icons/hicolor/128x128/apps/timeagent.png", mode = "644" },
    { source = "packaging/icons/hicolor/256x256/apps/timeagent.png", dest = "/usr/share/icons/hicolor/256x256/apps/timeagent.png", mode = "644" },
    { source = "packaging/icons/hicolor/512x512/apps/timeagent.png", dest = "/usr/share/icons/hicolor/512x512/apps/timeagent.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/timeagent/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/timeagent/LICENSE", mode = "644", doc = true },
]
